--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,13 @@
             <artifactId>spark-core_2.12</artifactId>
             <version>2.4.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11</version>
+            <type>pom</type>
+        </dependency>
 
         <dependency>
             <groupId>com.sparkjava</groupId>
