--- a/pom.xml
+++ b/pom.xml
@@ -183,13 +183,13 @@
             <artifactId>spark-core_2.12</artifactId>
             <version>2.4.5</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx</artifactId>
             <version>11</version>
             <type>pom</type>
-        </dependency>
+        </dependency>-->
         <!-- https://stackoverflow.com/questions/15278215/maven-project-with-javafx-with-jar-file-in-lib -->
 
         <dependency>
