--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 .idea/
-.*
+/src/main/resources/public/files/
 lib/
 *.iml
